Fix Java 21 to Java 11 - Part 39: Add getName() implementations and fix TopologyValidator